# vsCmakeCtestTest

./: CMakeLists.txt
subdir/: CMakeLists.txt  testFileAvailable.c
